# django-turboreload

./: LICENSE  README.md  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
polls/: constants.py  slow_import.py  views.py
turboreload/: importer.py  turboreload.py  util.py
turboreload/management/commands/: runserver_turbo.py
