[tool.poetry]
name = "django-turboreload"
version = "0.1.0"
description = ""
authors = ["Phillip Cutter <mrfleap@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
importhook = "^1.0.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
